# kalshi_market_trawler

./: .gitignore  ANALYSIS.md  pyproject.toml  run_all_city_edge_curves.py  run_comprehensive_weather.py  run_depth_analysis.py  run_distribution_analysis.py  run_optimal_sizing.py  run_rank_analysis.py  run_realistic_sim.py  run_realistic_sim_all.py  run_second_fav.py  run_second_fav_real.py
.github/workflows/: forward-test.yml
archive/: mta_exploration.ipynb  mta_ridership_interactive.html
kalshi_mta/: fetch_data.py  visualize.py
trawler/: cli.py  config.py  forward_test.py
trawler/analyzers/: base.py  mta_ridership.py  registry.py
trawler/api/: auth.py  client.py  models.py
trawler/backtesting/: backtest.py  calibration_backtest.py  metar_backtest.py  prophet_backtest.py
trawler/calibration/: scorer.py
trawler/db/: connection.py  resolutions_repo.py  schema.py  series_repo.py
trawler/reports/: cli_report.py
trawler/research/: covariate_findings.md  spotify_findings.md
trawler/scanner/: discover.py  edge_scanner.py  filter.py  price_history.py
