[project]
name = "kalshi-mta"
version = "0.1.0"
description = ""
authors = [
    {name = "sevroauasmo",email = "126302013+sevroauasmo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
    "plotly>=5.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
